# pyproject.toml

[project]
name = "CYSO"
version = "0.1.0"
description = "Create Your Synthetic Observation"
authors = [
    { name = "Antoine Alaguero", email = "antoine.alaguero@univ-grenoble-alpes.fr" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
cyso = "cyso.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
